Allow multiple instances of the tracker (close #426)  (#427)
* Add NotificationCenter

It's a basic observable pattern which slightly replicate the behaviour of iOS NotificationCenter in order to send automatic events to multiple trackers.

* Move getApplicationContext to Util

* Add NotificationCenter

It's a basic observable pattern which slightly replicate the behaviour of iOS NotificationCenter in order to send automatic events to multiple trackers.

* Move getApplicationContext to Util

* Allow multiple instances of the tracker

* Allow EventStore with multiple databases

* Track automatic tracking events on all the tracker instances

* Allow EventStore with multiple databases

* Allow default tracker and reconfiguration

* Fix tests and add MultipleInstancesTest

* Update demo app

* Rename DevicePlatforms to DevicePlatform

* Fix EventStoreTest with lambda not supported on old API versions

* Make Snowplow class members fully static